# acfr-digest

./: .gitignore  ALPHA_UI_BRIEF.md  CLAUDE.md  CODE_AUDIT_2026-07-07.md  FY25_Set3_results.checkpoint.csv  FY25_Set3_results.xlsx  KNOWN_LIMITATIONS.md  LICENSE  NEXT_SESSION_PLAN.md  README.md  acfr_digest_cli.py  app.py  cafr_output.xlsx  diagnose.py  examine2.py  examine_pdfs.py  parse_cafr.py  pyproject.toml  requirements.txt  run_set2.sh
.claude/: launch.json
.streamlit/: config.toml
Backups/2026-07-07_audited/: FY25_Set1_results.xlsx  FY25_Set2_results.xlsx  FY25_Set3_results.xlsx  FY25_Set3_results_pass1_baseline.xlsx  README.md  identity_audit.py  parse_cafr.py
FY25_City_ACFRs_Set4/: _progress_log.txt
tests/: smoke.py
